--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -901,7 +901,31 @@ img{
     padding: .75rem 1rem .25rem;
 }
 
-.contact__input{
+.contact__name{
+    width: 100%;
+    background-color: var(--input-color);
+    color: var(--text-color);
+    font-family: var(--body-font);
+    font-family: var(--body-font);
+    font-size: var(--normal-font-size);
+    border: none;
+    outline: none;
+    padding: .25rem .5rem .5rem 0;
+}
+
+.contact__email{
+    width: 100%;
+    background-color: var(--input-color);
+    color: var(--text-color);
+    font-family: var(--body-font);
+    font-family: var(--body-font);
+    font-size: var(--normal-font-size);
+    border: none;
+    outline: none;
+    padding: .25rem .5rem .5rem 0;
+}
+
+.contact__msg{
     width: 100%;
     background-color: var(--input-color);
     color: var(--text-color);
